adicion menu y cambio a mayusculas

--- a/src/main/webapp/diesel.html
+++ b/src/main/webapp/diesel.html
@@ -57,6 +57,14 @@
                     <div class="dropdown profile-element"> <span>
                             <img alt="image"  src="images/logo%20IESS.png" width="52" height="98" />
                              </span>
+                             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
+                            <span class="clear"> <span class="block m-t-xs"> <strong class="font-bold">HCAM</strong>
+                                </span></span>
+                              </a>
+                        <ul class="dropdown-menu animated fadeInRight m-t-xs">
+                            
+                            <li><a href="index.html">Salir</a></li>
+                        </ul>
                     </div>
                     <div class="logo-element">
                         HCAM
@@ -64,13 +72,13 @@
                 </li>
                 
                 <li>
-                    <a href="agua.html"><i class="fa fa-tint"></i> <span class="nav-label">Agua potable</span></a>
+                    <a href="agua.html"><i class="fa fa-tint"></i> <span class="nav-label">AGUA POTABLE</span></a>
                 </li>
                 <li class="active">
-                    <a href="diesel.html"><i class="fa fa-truck"></i> <span class="nav-label">Diesel</span></a>  
+                    <a href="diesel.html"><i class="fa fa-truck"></i> <span class="nav-label">DIESEL</span></a>  
                 </li>
                 <li>
-                    <a href="vapor.html"><i class="fa fa-fire"></i> <span class="nav-label">Vapor</span> </a>
+                    <a href="vapor.html"><i class="fa fa-fire"></i> <span class="nav-label">VAPOR</span> </a>
                 </li>
             </ul>
 
