Cambios para la estadistica de vapor

--- a/src/main/webapp/vapor.html
+++ b/src/main/webapp/vapor.html
@@ -72,7 +72,7 @@
                     <span class="m-r-sm text-muted welcome-message">Monitoreo Casa de Maquinas</span>
                 </li>
                 <li>
-                    <a href="estadistica_vapor.html">
+                    <a href="estadistica_vapor.jsp">
                         <i class="fa fa-table"></i> Estadistica
                     </a>
                 </li>
