cambios en el agua.
cambios para la estadistica del agua, DTO agua, manejador de agua,
cambio en la estadistica del agua a .jsp y aumento del boton de buscar
en las paginas de estadistica de agua, diesel y vapor

--- a/src/main/webapp/agua.html
+++ b/src/main/webapp/agua.html
@@ -99,7 +99,7 @@
                     <span class="m-r-sm text-muted welcome-message">Monitoreo Casa de Maquinas</span>
                 </li>                
 				<li>
-                    <a href="estadistica_agua.html">
+                    <a href="estadistica_agua.jsp">
                         <i class="fa fa-table"></i> Estadistica
                     </a>
                 </li>
