cambio nombre estadística diesel

--- a/src/main/webapp/diesel.html
+++ b/src/main/webapp/diesel.html
@@ -96,7 +96,7 @@
                     <span class="m-r-sm text-muted welcome-message">Monitoreo Casa de Maquinas</span>
                 </li>
                 <li>
-                    <a href="estadistica_diesel.html">
+                    <a href="estadistica_diesel.jsp">
                         <i class="fa fa-table"></i> Estadistica
                     </a>
                 </li>
