--- a/src/main/webapp/vapor.html
+++ b/src/main/webapp/vapor.html
@@ -95,7 +95,7 @@
 
                     <div class="col-sm-3">
                         <h2>ALARMAS</h2>
-                    <div class="widget yellow-bg p-lg text-center">
+                    <div class="widget red-bg p-lg text-center">
                         <div class="m-b-md">
                             <i class="fa fa-warning fa-4x"></i>
                             <h1 class="m-xs">Alarma</h1>
@@ -133,9 +133,9 @@
                     </div>
                     <div class="col-sm-3">
                         <h2>NOTIFICACIONES</h2>
-                        <div class="widget red-bg p-lg text-center">
+                        <div class="widget yellow-bg p-lg text-center">
                             <div class="m-b-md">
-                                <i class="fa fa-bullhorn fa-4x"></i>
+                                <i class="fa fa-bell fa-4x"></i>
                                 <h1 class="m-xs">nueva</h1>
                                 <h3 class="font-bold no-margins">
                                 NOTIFICACION
