--- a/src/main/webapp/diesel.html
+++ b/src/main/webapp/diesel.html
@@ -115,7 +115,7 @@
 
                     <div class="col-sm-3">
                         <h2>ALARMAS</h2>
-                    <div id="alarma" class="widget yellow-bg p-lg text-center">
+                    <div id="alarma" class="widget red-bg p-lg text-center">
                         <div class="m-b-md">
                             <i class="fa fa-warning fa-4x"></i>
                             <h1 class="m-xs">Alarma</h1>
@@ -153,7 +153,7 @@
                     </div>
                     <div class="col-sm-3">
                         <h2>NOTIFICACIONES</h2>
-                        <div class="widget red-bg p-lg text-center">
+                        <div class="widget yellow-bg p-lg text-center">
                             <div class="m-b-md">
                                 <i class="fa fa-bell fa-4x"></i>
                                 <h1 class="m-xs">47</h1>
