funcionalidad html diesel

--- a/src/main/webapp/vapor.html
+++ b/src/main/webapp/vapor.html
@@ -94,7 +94,7 @@
                  <div class="row  border-bottom white-bg dashboard-header">
 
                     <div class="col-sm-3">
-                        <h2>ALARMAS</h2>
+                        <h2><strong>ALARMAS</strong></h2>
                     <div id="alarma" class="widget red-bg p-lg text-center">
                         <div class="m-b-md">
                             <i class="fa fa-warning fa-4x"></i>
@@ -111,13 +111,13 @@
                     <div class="col-sm-6">
                         <h2 align="center" id="fecha"></h2>
                         <div class="ibox-content ibox-heading">
-                                    <h3>CUADRO DE DIALOGO</h3>
+                                    <h3><strong>ESTADO DEL SISTEMA</strong></h3>
                                     <h3 id="texto_cuadro_dialogo">OPERACI&Oacute;N NORMAL</h3>
                         </div>
                         
                         <div class="ibox-content">
                                 <h3>
-                                    INDICACIONES
+                                    <strong>INDICACIONES</strong> 
                                 </h3>
                                 <h3 id="texto_indicacion_alarma"></h3>
                                 <p></p>
@@ -127,7 +127,7 @@
                         
                     </div>
                     <div class="col-sm-3">
-                        <h2>NOTIFICACIONES</h2>
+                        <h2><strong>NOTIFICACIONES</strong></h2>
                         <div id="notificacion" class="widget yellow-bg p-lg text-center">
                             <div class="m-b-md">
                                 <i class="fa fa-bell fa-4x"></i>
