tilde en html diesel

--- a/src/main/webapp/diesel.html
+++ b/src/main/webapp/diesel.html
@@ -473,7 +473,7 @@
 				}
 
 			}).fail(function() { //on failure
-				alert("Fall&oacute; la petici&oacute;n");
+				alert("Falló la petición");
 			});
 		}
 		/*function actualizarEstadoBombas() {
