--- a/src/main/webapp/agua.html
+++ b/src/main/webapp/agua.html
@@ -158,11 +158,7 @@
                         <div id="notificacion" class="widget yellow-bg p-lg text-center">
                             <div class="m-b-md">
                                 <i class="fa fa-bell fa-4x"></i>
-                                <h1 class="m-xs">47</h1>
-                                <h3 class="font-bold no-margins">
-                                NOTIFICACIONES
-                                </h3>
-                                <small>SISTEMA SIN CONEXION</small>
+                                <h3 id="texto_notificacion" class="font-bold no-margins">NOTIFICACI&Oacute;N</h3>
                             </div>
                         </div>
                         <small>Espacio para las notificaciones</small>
